changing argline, making release plugin verbose